# at.st

./: .gitignore  docker-compose.yml
backend/: Cargo.toml  Dockerfile  rust-toolchain.toml
backend/migrations/: 20250611161743_create_posts_table_from_host.sql  20250622090059_create_boards_table.sql  20250622131916_seed_boards_table.sql  20250622172606_add_board_id_to_posts.sql  20250622173604_add_deleted_at_to_boards.sql  20250623133910_create_comments_table.sql  20250624085702_add_author_name_to_posts.sql  20250624085703_add_author_name_to_comments.sql  20250625051845_add_deleted_at_to_posts.sql  20250625202255_add_archived_at_column_to_posts.sql  20250626071250_add_last_activity_at_to_posts.sql  20250703172311_create_auth_tables.sql  20250704165820_add_role_to_users.sql  20250705000000_modify_sessions_for_raw_token.sql  20250705121500_add_user_id_to_comments.sql  20250705150900_add_user_identity_hashes.sql  20250706100430_create_device_linking_tokens.sql  20250707071038_add_default_name_to_boards.sql  20250707153754_create_bans_table.sql  20250707155349_add_created_by_to_boards.sql  20250711105700_create_post_identities.sql  20250711112300_create_comment_identities.sql  20250711135300_add_source_ids_to_bans.sql  20250713195000_add_level_system.sql  20250713220900_add_level_at_creation.sql  20250716152221_add_verification_system.sql  20250723063900_board_identities.sql  20250725171100_add_bans_table.sql  20250728203700_add_max_posts_to_boards.sql  20250731181200_create_rate_limiter_tables.sql  20250801143031_add_action_type_to_rate_limit_rules.sql  20250801190643_add_rate_limit_exemption_to_users.sql  20250803220201_add_last_linking_token_generated_at_to_users.sql  20250805012200_add_moderation_features.sql  20250806132200_add_auto_archive_to_boards.sql  20250808085600_add_display_id_parts.sql  (+2 more)
(+83 files in other folders)
