[package]
name = "niwatori"
version = "0.1.0"
edition = "2021" 

[dependencies]
actix-web = "4"
actix-web-lab = "0.20"
actix-cors = "0.7"
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "macros",
    "chrono"
] }
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
tokio = { version = "1", features = ["time", "macros", "rt-multi-thread"] } # スケジューラーのために time を追加
serde = { version = "1.0", features = ["derive"] }
validator = { version = "0.18", features = ["derive"] }
derive_more = "0.99"
serde_json = "1.0"
ammonia = "4.1.0" # XSS対策のためのHTMLサニタイザー (最新バージョンに更新)
log = "0.4"
env_logger = "0.11"
futures-util = "0.3" # ミドルウェアで使用
aes-gcm = "0.10.3"
jsonwebtoken = "8"
base62 = "2.0.4"
hmac = "0.12.1"
encoding_rs = "0.8"

# --- 専ブラ連携トークンで追加 ---
sha2 = "0.10"
hex = "0.4"
regex = { version = "1", default-features = false, features = ["std"] }
once_cell = "1.19"

# --- 認証機能で追加 ---
rand = { version = "0.8", features = ["std_rng"] }
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls-tls"] } # メール送信用
 # native-tlsを使いつつ、OSのプロキシ設定を利用するために "proxy" feature を明示的に有効化します。
reqwest = { version = "0.12.5", default-features = false, features = ["json", "native-tls"] }
futures = "0.3.31"
[dependencies.argon2]
version = "0.5"
default-features = false
features = ["std"]  # 必要なら "std" は残す

[dev-dependencies]
actix-web = "4" # test-util フィーチャーを削除
# dev-dependenciesも本番と設定を合わせ、テストの一貫性を保ちます。
reqwest = { version = "0.12.5", default-features = false, features = ["json", "native-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] } # 非同期ランタイム
serial_test = "3.0.0" # For running tests serially
